--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,24 @@
 
 /* Generic Classes */
 
+html {
+  scroll-behavior: smooth;
+}
+
 section {
   background-color: rgb(245, 245, 245);
+}
+
+.container {
+  padding: 50px 0;
+  width: 100%;
+}
+
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 12px;
 }
 
 .click {
@@ -38,6 +54,11 @@ li {
 
 a {
   text-decoration: none;
+  color: #242424;
+}
+
+button {
+  cursor: pointer;
 }
 
 p {
@@ -50,7 +71,10 @@ p {
   font-weight: 700;
 }
 
-/* Navigation Bar */
+/* 
+
+NAVIGATION BAR
+*/
 
 nav {
   display: flex;
@@ -94,6 +118,7 @@ LANDING PAGE
 
 #landing-page {
   height: 100vh;
+  position: relative;
 }
 
 .header {
@@ -129,4 +154,176 @@ LANDING PAGE
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.mail__btn {
+  width: 70px;
+  height: 70px;
+  font-size: 32px;
+  border-radius: 50%;
+  border: none;
+  background-color: #242424;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  position: absolute;
+  bottom: 32px;
+  right: 40px;
+  position: fixed;
+}
+
+.scroll {
+  position: absolute;
+  bottom: 32px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.scroll__icon {
+  width: 20px;
+  height: 30px;
+  border: 2px solid #242424;
+  border-radius: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.scroll__icon:after {
+  content: '';
+  width: 4px;
+  height: 6px;
+  background-color: #242424;
+  border-radius: 2px;
+  animation: scroll 1000ms infinite alternate-reverse;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateY(3px);
+  }
+
+  100% {
+    transform: translateY(-3px);
+  }
+}
+
+/*
+
+Projects
+
+*/
+
+.section__title {
+  text-align: center;
+  font-size: 48px;
+  margin-bottom: 60px;
+}
+
+.project {
+  margin-bottom: 135px;
+}
+
+.project__wrapper {
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+}
+
+.project__wrapper:hover .project__img {
+  transform: scale(1.1);
+  filter: blur(5px);
+}
+
+.project__wrapper:hover .project__description {
+  opacity: 1;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.project__wrapper:hover .project__wrapper--bg {
+  opacity: 0.7;
+}
+
+.project__img {
+  width: 100%;
+  transition: all 450ms ease;
+}
+
+.project__wrapper--bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1c1d25;
+  opacity: 0;
+  transition: all 450ms ease;
+}
+
+.project__description {
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  transform: translateY(100%);
+  max-width: 550px;
+  color: white;
+  opacity: 0;
+  transition: opacity 300ms, transform 450ms ease;
+}
+
+.project__description--title {
+  font-size: 40px;
+}
+
+.project__description--sub-title {
+  margin-top: 8px;
+}
+
+.project__description--link {
+  color: white;
+  font-size: 20px;
+  margin-right: 16px;
+}
+
+.project__description--para {
+  margin: 16px 0;
+}
+
+/*
+
+FOOTER
+
+*/
+
+footer {
+  background-color: #242424;
+  padding: 6% 0;
+}
+
+.footer__row {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__logo {
+  filter: invert(1);
+  width: 70px;
+}
+
+.footer__social--list {
+  margin: 28px 0;
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer__social--link,
+.footer__copyright {
+  color: white;
 }
