--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,33 @@ p {
   font-weight: 700;
 }
 
+.link__hover-effect {
+ position: relative;
+}
+
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  right: 0;
+  width: 0;
+  height: 3px;
+  transition: all 300ms ease;
+}
+
+.link__hover-effect:hover:after {
+  left: 0;
+  width: 100%;
+}
+
+.link__hover-effect--black:after {
+  background-color: #242424;
+}
+
+.link__hover-effect--white:after {
+  background-color: white;
+}
+
 /* 
 
 NAVIGATION BAR
