--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,92 @@ LANDING PAGE
   }
 }
 
+/* 
+
+MODAL
+
+*/
+
+.modal {
+  display: flex;
+  position: absolute; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 700px;
+  width: 90%;
+  max-width: 1100px;
+  border-radius: 24px;
+  overflow: hidden;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+}
+
+.modal__half {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 40px 72px;
+}
+
+.modal__about {
+  background-color: white;
+}
+
+.modal__title {
+  font-size: 26px;
+}
+
+.modal__sub-title {
+  margin: 12px 0 24px;
+}
+
+.modal__para {
+  margin-bottom: 12px;
+  line-height: 1.75;
+}
+
+.modal__languages {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.modal__language {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal__language--img {
+  width: 100%;
+  padding: 16px;
+  transition: all 300ms ease;
+}
+
+.modal__language:hover .modal__language--img {
+  filter: brightness(0.7);
+  transform: scale(0.9);
+}
+
+.language__name {
+  letter-spacing: 1px;
+  opacity: 0;
+  transition: all 400ms ease;
+
+}
+
+.modal__language:hover .language__name {
+  opacity: 1;
+  transform:  scale(1.2);
+}
+
+.modal__contact {
+  background-color: #242424;
+  color: white;
+}
+
 /*
 
 Projects
