modal ui completed

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ section {
 
 .click {
   transition: all 300ms ease;
+  cursor: pointer;
 }
 
 .click:hover {
@@ -57,14 +58,49 @@ a {
   color: #242424;
 }
 
-button {
-  cursor: pointer;
-}
-
 p {
   line-height: 1.5;
   font-size: 16px;
 }
+
+input, textarea {
+  width: 100%;
+  background-color: #242424;
+  color: white;
+  outline: none;
+  border: 3px solid #c0c4cc;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  height: 40px;
+  transition: all 300ms ease;
+}
+
+label {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+textarea {
+  resize: vertical;
+  height: 100px;
+  margin-top: 8px;
+}
+
+input:hover, 
+textarea:hover {
+  border-color: #33bfa8;
+}
+
+input:focus,
+textarea:focus {
+  border-color: #33bfa8;
+}
+
+button {
+  cursor: pointer;
+}
+
 
 .teal {
   color: #33bfa8;
@@ -320,11 +356,88 @@ MODAL
 .modal__contact {
   background-color: #242424;
   color: white;
+  position: relative;
+}
+
+.form__item {
+  margin-bottom: 20px;
+}
+
+.form__submit {
+  background-color: #33bfa8;
+  color: white;
+  border: 2px solid #33bfa8;
+  font-weight: 700;
+  width: 100%;
+  max-width: 240px;
+  padding: 12px 24px;
+  font-size: 20px;
+  transition: all 300ms ease;
+}
+
+.form__submit:hover {
+  background-color: transparent;
+  border: 2px solid white;
+}
+
+.form__submit:active {
+  border: 2px solid #33bfa8;
+  color: #33bfa8;
+}
+
+/* Modal Overlay */
+
+.modal__overlay--loading,
+.modal__overlay--success {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal__overlay--loading {
+  background-color: #242424;
+  font-size: 80px;
+  z-index: -1;
+}
+
+.fa-spinner {
+  animation: spinner 750ms infinite linear;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.modal__overlay--success {
+  background-color: #4bb543;
+  font-size: 40px;
+  font-weight: bold;
+  padding: 28px;
+  text-align: center;
+}
+
+.fa-xmark {
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  font-size: 36px;
+  color: white;
+  z-index: 100;
 }
 
 /*
 
-Projects
+PROJECTS
 
 */
 
